# msc-experiments

./: .gitignore
01_livewire/: livewire_experiment.py
01_livewire/cpp/: CMakeLists.txt  Graph.hpp  dijkstra.cpp  graph-test.cpp
02_optical_flow/: CMakeLists.txt  dense_optical_flow.cpp
03_region_growing/: CMakeLists.txt  region_growing.cpp  region_growing_b.cpp
04_feature_descriptors/: CMakeLists.txt  livewire.hpp  main.cpp  surf.cpp
